result.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-db-svc
  namespace: default
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    airbyte: db
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: airbyte-server-svc
  namespace: default
spec:
  ports:
  - port: 8001
    protocol: TCP
  selector:
    airbyte: server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: airbyte-temporal-svc
  namespace: default
spec:
  ports:
  - port: 7233
    protocol: TCP
  selector:
    airbyte: temporal
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: airbyte-webapp-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    airbyte: webapp
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: db
  template:
    metadata:
      labels:
        airbyte: db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: db-airbyte
        - name: POSTGRES_PASSWORD
          value: docker
        - name: POSTGRES_USER
          value: docker
        image: airbyte/db:0.26.4-alpha
        name: airbyte-db-container
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: 2
            memory: 8G
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: airbyte-volume-db
      volumes:
      - name: airbyte-volume-db
        persistentVolumeClaim:
          claimName: airbyte-volume-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-scheduler
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: scheduler
  template:
    metadata:
      labels:
        airbyte: scheduler
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: AIRBYTE_VERSION
          valueFrom:
            configMapKeyRef:
              key: AIRBYTE_VERSION
              name: airbyte-env-fkd4khd2bk
        - name: CONFIG_ROOT
          valueFrom:
            configMapKeyRef:
              key: CONFIG_ROOT
              name: airbyte-env-fkd4khd2bk
        - name: DATABASE_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PASSWORD
              name: airbyte-env-fkd4khd2bk
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: airbyte-env-fkd4khd2bk
        - name: DATABASE_USER
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USER
              name: airbyte-env-fkd4khd2bk
        - name: TRACKING_STRATEGY
          valueFrom:
            configMapKeyRef:
              key: TRACKING_STRATEGY
              name: airbyte-env-fkd4khd2bk
        - name: WAIT_BEFORE_HOSTS
          value: "5"
        - name: WAIT_HOSTS
          value: airbyte-db-svc:5432
        - name: WAIT_HOSTS_TIMEOUT
          value: "45"
        - name: WORKSPACE_DOCKER_MOUNT
          value: workspace
        - name: WORKSPACE_ROOT
          valueFrom:
            configMapKeyRef:
              key: WORKSPACE_ROOT
              name: airbyte-env-fkd4khd2bk
        - name: WORKER_ENVIRONMENT
          valueFrom:
            configMapKeyRef:
              key: WORKER_ENVIRONMENT
              name: airbyte-env-fkd4khd2bk
        - name: LOCAL_ROOT
          valueFrom:
            configMapKeyRef:
              key: LOCAL_ROOT
              name: airbyte-env-fkd4khd2bk
        - name: WEBAPP_URL
          valueFrom:
            configMapKeyRef:
              key: WEBAPP_URL
              name: airbyte-env-fkd4khd2bk
        - name: TEMPORAL_HOST
          valueFrom:
            configMapKeyRef:
              key: TEMPORAL_HOST
              name: airbyte-env-fkd4khd2bk
        - name: TEMPORAL_WORKER_PORTS
          valueFrom:
            configMapKeyRef:
              key: TEMPORAL_WORKER_PORTS
              name: airbyte-env-fkd4khd2bk
        - name: S3_LOG_BUCKET
          valueFrom:
            configMapKeyRef:
              key: S3_LOG_BUCKET
              name: airbyte-env-fkd4khd2bk
        - name: S3_LOG_BUCKET_REGION
          valueFrom:
            configMapKeyRef:
              key: S3_LOG_BUCKET_REGION
              name: airbyte-env-fkd4khd2bk
        - name: AWS_ACCESS_KEY_ID
          valueFrom:
            configMapKeyRef:
              key: AWS_ACCESS_KEY_ID
              name: airbyte-env-fkd4khd2bk
        - name: AWS_SECRET_ACCESS_KEY
          valueFrom:
            configMapKeyRef:
              key: AWS_SECRET_ACCESS_KEY
              name: airbyte-env-fkd4khd2bk
        - name: KUBE_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: airbyte/scheduler:0.26.4-alpha
        name: airbyte-scheduler-container
        ports:
        - containerPort: 9000
        - containerPort: 9001
        - containerPort: 9002
        - containerPort: 9003
        - containerPort: 9004
        - containerPort: 9005
        - containerPort: 9006
        - containerPort: 9007
        - containerPort: 9008
        - containerPort: 9009
        - containerPort: 9010
        - containerPort: 9011
        - containerPort: 9012
        - containerPort: 9013
        - containerPort: 9014
        - containerPort: 9015
        - containerPort: 9016
        - containerPort: 9017
        - containerPort: 9018
        - containerPort: 9019
        - containerPort: 9020
        - containerPort: 9021
        - containerPort: 9022
        - containerPort: 9023
        - containerPort: 9024
        - containerPort: 9025
        - containerPort: 9026
        - containerPort: 9027
        - containerPort: 9028
        - containerPort: 9029
        - containerPort: 9030
        resources:
          limits:
            cpu: 2
            memory: 512Mi
        volumeMounts:
        - mountPath: /configs
          name: airbyte-volume-configs
        - mountPath: /workspace
          name: airbyte-volume-workspace
      serviceAccountName: airbyte-admin
      volumes:
      - name: airbyte-volume-workspace
        persistentVolumeClaim:
          claimName: airbyte-volume-workspace
      - name: airbyte-volume-configs
        persistentVolumeClaim:
          claimName: airbyte-volume-configs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: server
  template:
    metadata:
      labels:
        airbyte: server
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: airbyte
                operator: In
                values:
                - scheduler
            topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: AIRBYTE_VERSION
          valueFrom:
            configMapKeyRef:
              key: AIRBYTE_VERSION
              name: airbyte-env-fkd4khd2bk
        - name: CONFIG_ROOT
          valueFrom:
            configMapKeyRef:
              key: CONFIG_ROOT
              name: airbyte-env-fkd4khd2bk
        - name: DATABASE_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PASSWORD
              name: airbyte-env-fkd4khd2bk
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: airbyte-env-fkd4khd2bk
        - name: DATABASE_USER
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USER
              name: airbyte-env-fkd4khd2bk
        - name: TRACKING_STRATEGY
          valueFrom:
            configMapKeyRef:
              key: TRACKING_STRATEGY
              name: airbyte-env-fkd4khd2bk
        - name: WAIT_BEFORE_HOSTS
          value: "5"
        - name: WAIT_HOSTS
          value: airbyte-db-svc:5432
        - name: WAIT_HOSTS_TIMEOUT
          value: "45"
        - name: WORKER_ENVIRONMENT
          valueFrom:
            configMapKeyRef:
              key: WORKER_ENVIRONMENT
              name: airbyte-env-fkd4khd2bk
        - name: WORKSPACE_ROOT
          valueFrom:
            configMapKeyRef:
              key: WORKSPACE_ROOT
              name: airbyte-env-fkd4khd2bk
        - name: WEBAPP_URL
          valueFrom:
            configMapKeyRef:
              key: WEBAPP_URL
              name: airbyte-env-fkd4khd2bk
        - name: TEMPORAL_HOST
          valueFrom:
            configMapKeyRef:
              key: TEMPORAL_HOST
              name: airbyte-env-fkd4khd2bk
        - name: S3_LOG_BUCKET
          valueFrom:
            configMapKeyRef:
              key: S3_LOG_BUCKET
              name: airbyte-env-fkd4khd2bk
        - name: S3_LOG_BUCKET_REGION
          valueFrom:
            configMapKeyRef:
              key: S3_LOG_BUCKET_REGION
              name: airbyte-env-fkd4khd2bk
        - name: AWS_ACCESS_KEY_ID
          valueFrom:
            configMapKeyRef:
              key: AWS_ACCESS_KEY_ID
              name: airbyte-env-fkd4khd2bk
        - name: AWS_SECRET_ACCESS_KEY
          valueFrom:
            configMapKeyRef:
              key: AWS_SECRET_ACCESS_KEY
              name: airbyte-env-fkd4khd2bk
        image: airbyte/server:0.26.4-alpha
        name: airbyte-server-container
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: 1
            memory: 2G
        volumeMounts:
        - mountPath: /configs
          name: airbyte-volume-configs
        - mountPath: /workspace
          name: airbyte-volume-workspace
      volumes:
      - name: airbyte-volume-workspace
        persistentVolumeClaim:
          claimName: airbyte-volume-workspace
      - name: airbyte-volume-configs
        persistentVolumeClaim:
          claimName: airbyte-volume-configs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-temporal
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: temporal
  template:
    metadata:
      labels:
        airbyte: temporal
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USER
              name: airbyte-env-fkd4khd2bk
        - name: POSTGRES_PWD
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PASSWORD
              name: airbyte-env-fkd4khd2bk
        - name: DYNAMIC_CONFIG_FILE_PATH
          value: config/dynamicconfig/development.yaml
        - name: DB
          value: postgresql
        - name: DB_PORT
          value: "5432"
        - name: POSTGRES_SEEDS
          value: airbyte-db-svc
        image: temporalio/auto-setup:1.7.0
        name: airbyte-temporal
        ports:
        - containerPort: 7233
        resources:
          limits:
            cpu: 2
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/temporal/config/dynamicconfig/
          name: airbyte-temporal-dynamicconfig
      volumes:
      - configMap:
          items:
          - key: development.yaml
            path: development.yaml
          name: airbyte-temporal-dynamicconfig
        name: airbyte-temporal-dynamicconfig
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-webapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: webapp
  template:
    metadata:
      labels:
        airbyte: webapp
    spec:
      containers:
      - env:
        - name: AIRBYTE_VERSION
          valueFrom:
            configMapKeyRef:
              key: AIRBYTE_VERSION
              name: airbyte-env-fkd4khd2bk
        - name: API_URL
          valueFrom:
            configMapKeyRef:
              key: API_URL
              name: airbyte-env-fkd4khd2bk
        - name: TRACKING_STRATEGY
          valueFrom:
            configMapKeyRef:
              key: TRACKING_STRATEGY
              name: airbyte-env-fkd4khd2bk
        - name: PAPERCUPS_STORYTIME
          valueFrom:
            configMapKeyRef:
              key: PAPERCUPS_STORYTIME
              name: airbyte-env-fkd4khd2bk
        - name: FULLSTORY
          valueFrom:
            configMapKeyRef:
              key: FULLSTORY
              name: airbyte-env-fkd4khd2bk
        - name: IS_DEMO
          valueFrom:
            configMapKeyRef:
              key: IS_DEMO
              name: airbyte-env-fkd4khd2bk
        - name: INTERNAL_API_HOST
          valueFrom:
            configMapKeyRef:
              key: INTERNAL_API_HOST
              name: airbyte-env-fkd4khd2bk
        image: airbyte/webapp:0.26.4-alpha
        name: airbyte-webapp-container
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 512Mi
